Fix mistake in database dumper test
Former-commit-id: 9656f7d4a4940e0be6e12446c81335ab8d0138e2